# RacoGraph

./: .gitignore  EVALUATION_GUIDE.md  EVAL_QUICKSTART.md  README.md  app.py  constants.py  data_loader.py  eval.py  graph.py  main.py  pyproject.toml  recommender.py  visualizer.py  viz_user_1.html  viz_user_7.html
outputs/: recommendations_user1.csv
