[project]
name = "racograph"
version = "0.1.0"
description = "Sistema de recomendação de filmes baseado em grafos usando dados do MovieLens"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.3.4",
    "pandas==2.3.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "six==1.17.0",
    "tzdata==2025.2",
    "matplotlib>=3.5.0",
    "networkx>=2.8.0",
    "streamlit>=1.28.0",
    "pyvis>=0.3.0",
]
